--- a/EladoKliens/Properties/Resources.hu-HU.resx
+++ b/EladoKliens/Properties/Resources.hu-HU.resx
@@ -118,15 +118,15 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Login" xml:space="preserve">
-    <value>Login</value>
+    <value>Belépés</value>
   </data>
   <data name="Password" xml:space="preserve">
-    <value>Password:</value>
+    <value>Jelszó:</value>
   </data>
   <data name="Title" xml:space="preserve">
-    <value>Seller</value>
+    <value>Eladó</value>
   </data>
   <data name="Username" xml:space="preserve">
-    <value>Username:</value>
+    <value>Felhasználónév:</value>
   </data>
 </root>
