--- a/EladoKliens/Properties/Resources.resx
+++ b/EladoKliens/Properties/Resources.resx
@@ -117,14 +117,32 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Error" xml:space="preserve">
+    <value>Error</value>
+  </data>
   <data name="Login" xml:space="preserve">
     <value>Login</value>
+  </data>
+  <data name="LoginError" xml:space="preserve">
+    <value>Authentication failed. Please try again.</value>
+  </data>
+  <data name="ManageProducts" xml:space="preserve">
+    <value>Manage products</value>
   </data>
   <data name="Password" xml:space="preserve">
     <value>Password:</value>
   </data>
+  <data name="ProductSearch" xml:space="preserve">
+    <value>Search for products:</value>
+  </data>
+  <data name="SearchButton" xml:space="preserve">
+    <value>Search</value>
+  </data>
   <data name="Title" xml:space="preserve">
     <value>Seller</value>
+  </data>
+  <data name="TransferButton" xml:space="preserve">
+    <value>Transfer</value>
   </data>
   <data name="Username" xml:space="preserve">
     <value>Username:</value>
